Fixed a mobile layout issue
Fixed a mobile layout issue

--- a/src/pages/AboutTheTeam/style.css
+++ b/src/pages/AboutTheTeam/style.css
@@ -2,10 +2,6 @@
   margin: 2%;
 }
 
-.devs h1 {
-  margin: auto;
-}
-
 h1 {
   margin-top: 0px;
   margin-bottom: 5px;
@@ -64,7 +60,7 @@ h2, h3, h4, h5, h6 {
   width: 50%;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 960px) {
   .penguin-party {
     flex-direction: column;
     align-items: center;
@@ -75,6 +71,6 @@ h2, h3, h4, h5, h6 {
     grid-template-columns: 1fr;
   }
   .hiturunk {
-    width: 45%;
+    width: 30%;
   }
 }
